tests/paczka1/small_fuzzy/41549622.err
Error in line 2: lCzlqKnk S752 29,6
Error in line 5: lCzlqKnk A993 -2,6
Error in line 6: S533 A993 93,5
Error in line 9: B
